--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,24 @@
     font-size: 1.5em;
     font-weight: bold;
 }
+.county {
+    fill: #FFF;
+    stroke:#999;
+    stroke-width: 1;
+}
+.countries {
+    fill: #FFF;
+    stroke:#999;
+    stroke-width: 1;
+}
+.gratLines {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+}
+.gratBackground {
+    fill: #D5E3FF;
+}
+.map {
+    border: medium solid #999;
+}
