--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,9 @@
-.axis path,
-.axis line {
-    fill: none;
-    stroke: black;
-    stroke-width: 1px;
-    shape-rendering: crispEdges;
-}
-
-.axis text {
-    font-family: sans-serif;
-    font-size: 0.9em;
-}
 .title {
     font-family: sans-serif;
     font-size: 1.5em;
     font-weight: bold;
 }
-.county {
-    fill: #FFF;
-    stroke:#999;
-    stroke-width: 1;
-}
+
 .countries {
     fill: #FFF;
     stroke:#999;
@@ -35,4 +19,47 @@
 }
 .map {
     border: medium solid #999;
+    margin: 10px 0 0 20px;
+}
+
+.county {
+    stroke: #000;
+    stroke-width: 0.5px;
+    stroke-linecap: round;
+}
+
+.chart {
+    float: right;
+    margin: 7px 20px 0 0;
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.chartBackground {
+    fill: rgba(128,128,128,.2);
+}
+
+.chartFrame {
+    fill: none;
+    stroke: #999;
+    stroke-width: 3px;
+    shape-rendering: crispEdges;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 0.8em;
+    fill: #999;
 }
