--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,17 @@
 }
 
 .countries {
-    fill: #FFF;
+    fill: #cbc7d4;
     stroke:#999;
-    stroke-width: 1;
+    stroke-width: 2;
 }
 .gratLines {
     fill: none;
-    stroke: #999;
+    stroke: #c5c4c4;
     stroke-width: 1px;
 }
 .gratBackground {
-    fill: #D5E3FF;
+    fill: #8ab0fa;
 }
 .map {
     border: medium solid #999;
@@ -24,7 +24,7 @@
 
 .county {
     stroke: #000;
-    stroke-width: 0.5px;
+    stroke-width: 0px;
     stroke-linecap: round;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .chartBackground {
-    fill: rgba(128,128,128,.2);
+    fill: #ffffff;
 }
 
 .chartFrame {
@@ -62,4 +62,37 @@
     font-family: sans-serif;
     font-size: 0.8em;
     fill: #999;
+}
+.dropdown {
+    position: absolute;
+    top: 450px;
+    left: 40px;
+    z-index: 10;
+    font-family: sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 2px;
+    border: 1px solid #999;
+    box-shadow: 2px 2px 4px #999;
+}
+
+option {
+    font-weight: normal;
+}
+
+.infolabel {
+    position: absolute;
+    height: 50px;
+    min-width: 100px;
+    color: #fff;
+    background-color: #000;
+    border: solid thin #fff;
+    padding: 5px 10px;
+}
+
+.infolabel h1 {
+    margin: 0 20px 0 0;
+    padding: 0;
+    display: inline-block;
+    line-height: 1em;
 }
